# pses_kinect_utilities

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  rosdoc.yaml
cfg/: KinectFilter.cfg  MedianFilter.cfg  VoxelGridFilter.cfg
docs/: index.html  manifest.yaml
docs/html/: index-msg.html  index.html
docs/html/c++/: annotated.html  classes.html  classpointcloud__to__laserscan_1_1PointCloudToLaserScanNodelet-members.html  classpointcloud__to__laserscan_1_1PointCloudToLaserScanNodelet.html  classpointcloud__to__laserscan_1_1PointCloudToLaserScanNodelet__inherit__graph.map  classpointcloud__to__laserscan_1_1PointCloudToLaserScanNodelet__inherit__graph.md5  classpses__kinect__utilities_1_1DepthImageToPCL-members.html  classpses__kinect__utilities_1_1DepthImageToPCL.html  classpses__kinect__utilities_1_1MedianFilterNodelet-members.html  classpses__kinect__utilities_1_1MedianFilterNodelet.html  classpses__kinect__utilities_1_1MedianFilterNodelet__inherit__graph.map  classpses__kinect__utilities_1_1MedianFilterNodelet__inherit__graph.md5  classpses__kinect__utilities_1_1PointCloudXYZNodelet-members.html  classpses__kinect__utilities_1_1PointCloudXYZNodelet.html  classpses__kinect__utilities_1_1PointCloudXYZNodelet__inherit__graph.map  classpses__kinect__utilities_1_1PointCloudXYZNodelet__inherit__graph.md5  classpses__kinect__utilities_1_1VoxelGridFilterNodelet-members.html  classpses__kinect__utilities_1_1VoxelGridFilterNodelet.html  classpses__kinect__utilities_1_1VoxelGridFilterNodelet__inherit__graph.map  classpses__kinect__utilities_1_1VoxelGridFilterNodelet__inherit__graph.md5  depth__image__to__pcl_8cpp.html  depth__image__to__pcl_8cpp__incl.map  depth__image__to__pcl_8cpp__incl.md5  depth__image__to__pcl_8cpp_source.html  depth__image__to__pcl_8h.html  depth__image__to__pcl_8h__dep__incl.map  depth__image__to__pcl_8h__dep__incl.md5  depth__image__to__pcl_8h__incl.map  depth__image__to__pcl_8h__incl.md5  depth__image__to__pcl_8h_source.html  dir_000003_000001.html  dir_19218ade6180783d5860f89649604c4b.html  dir_19218ade6180783d5860f89649604c4b_dep.map  dir_19218ade6180783d5860f89649604c4b_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_c544f0dabc1c784a55449dba30b39517.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  (+85 more)
include/pses_kinect_filter/: depth_image_to_pcl.h  ocl_depth_image_to_laser_scan.h  opencltest.h
include/pses_kinect_utilities/: depth_image_to_pcl.h  median_filter.h  ocl_library_wrapper.h  point_cloud_to_laserscan.h  point_cloud_xyz.h  voxel_grid_filter.h
launch/: kinect_filter.launch
ocl_kernel/: ocl_kernel.cl  ocl_kernel1.cl  ocl_kernel2.cl
src/: depth_image_to_pcl.cpp  kinect_filter.cpp  ocl_library_wrapper.cpp
src/nodelets/: median_filter.cpp  point_cloud_to_laserscan.cpp  point_cloud_xyz.cpp  voxel_grid_filter.cpp
